ncc/testsuite/negative/parser.n


module M {
  public boo () : void {
    match (2) {
      | _ =>
        ()
        _ = 34; // E: unexpected tokens after expression in sequence
    }
  }
}

